Compiladores/y.output
Terminals unused in grammar

    TK_QB
    TK_CAST_BOOL
    TK_FIM
    TK_ERROR


State 106 conflicts: 12 shift/reduce
State 181 conflicts: 1 shift/reduce


Grammar

    0 $accept: S $end

    1 S: TK_TIPO_INT TK_MAIN '(' ')' BLOCO GLOBAL

    2 GLOBAL: TIPO TK_ID '(' PARAMETROS ')' BLOCO
    3       | ε

    4 TIPO: TK_TIPO_INT
    5     | TK_TIPO_FLOAT
    6     | TK_TIPO_CHAR
    7     | TK_TIPO_BOOL
    8     | TK_TIPO_STRING
    9     | TK_TIPO_VOID

   10 PARAMETROS: TIPO TK_ID
   11           | TIPO TK_ID ',' PARAMETROS

   12 BLOCO: '{' INI COMANDOS FIM '}'

   13 INI: ε

   14 FIM: ε

   15 COMANDOS: COMANDO COMANDOS
   16         | ε

   17 COMANDO: BLOCO
   18        | E ';'
   19        | IF
   20        | IF_ELSE
   21        | WHILE
   22        | DO_WHILE
   23        | FOR
   24        | SWITCH
   25        | PRINT
   26        | TK_ID '=' TK_SCAN '(' ')' ';'
   27        | TK_TIPO_INT TK_ID ';'
   28        | TK_TIPO_FLOAT TK_ID ';'
   29        | TK_TIPO_CHAR TK_ID ';'
   30        | TK_TIPO_BOOL TK_ID ';'
   31        | TK_TIPO_STRING TK_ID ';'
   32        | TK_TIPO_INT TK_ID '[' E ']' ';'
   33        | TK_TIPO_FLOAT TK_ID '[' E ']' ';'
   34        | TK_ID '=' TK_ID '[' E ']' ';'
   35        | TK_ID '[' E ']' '=' E ';'
   36        | TK_RETURN E ';'
   37        | TK_COMENT
   38        | TK_TIPO_INT TK_ID '[' E ']' '[' E ']' ';'
   39        | TK_TIPO_FLOAT TK_ID '[' E ']' '[' E ']' ';'
   40        | TK_ID '[' E ']' '[' E ']' '=' E ';'

   41 IF: TK_IF '(' E ')' BLOCO

   42 IF_ELSE: TK_IF '(' E ')' BLOCO TK_ELSE BLOCO

   43 FOR: TK_FOR '(' E ';' E ';' E ')' BLOCO_LOOP

   44 WHILE: TK_WHILE '(' E ')' BLOCO_LOOP

   45 DO_WHILE: TK_DO BLOCO_LOOP TK_WHILE '(' E ')' ';'

   46 BLOCO_LOOP: '{' INI CMD FIM '}'

   47 CMD: COMANDOS BREAK_OR_CONTINUE CMD
   48    | COMANDOS

   49 BREAK_OR_CONTINUE: TK_BREAK ';'
   50                  | TK_CONTINUE ';'

   51 SWITCH: TK_SWITCH '(' E ')' BLOCO_SWITCH

   52 BLOCO_SWITCH: '{' CASE_LISTA '}'

   53 CASE_LISTA: CASE_STMT CASE_LISTA
   54           | ε

   55 CASE_STMT: CASE

   56 CASE: TK_CASE E TK_DP COMANDOS
   57     | TK_DEFAULT TK_DP COMANDOS

   58 PRINT: TK_PRINT '(' EXPRESSAO ')' ';'

   59 EXPRESSAO: TEXTO
   60          | TEXTO '+' EXPRESSAO

   61 TEXTO: TK_STRING
   62      | TK_CHAR
   63      | TK_ID

   64 E: E '>' E
   65  | E '<' E
   66  | E EQ E
   67  | E NE E
   68  | E GE E
   69  | E LE E
   70  | E AND E
   71  | E OR E
   72  | NO E
   73  | E '+' E
   74  | E '-' E
   75  | E '*' E
   76  | E '/' E
   77  | TK_ID '=' E
   78  | TK_NUM
   79  | TK_REAL
   80  | TK_CHAR
   81  | TK_STRING
   82  | TK_FALSE
   83  | TK_TRUE
   84  | TK_CAST_FLOAT E
   85  | TK_CAST_INT E
   86  | TK_CAST_CHAR E
   87  | TK_ID
   88  | TK_ID '[' E ']'
   89  | ε


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 1 2 26 41 42 43 44 45 51 58
    ')' (41) 1 2 26 41 42 43 44 45 51 58
    '*' (42) 75
    '+' (43) 60 73
    ',' (44) 11
    '-' (45) 74
    '/' (47) 76
    ';' (59) 18 26 27 28 29 30 31 32 33 34 35 36 38 39 40 43 45 49 50 58
    '<' (60) 65
    '=' (61) 26 34 35 40 77
    '>' (62) 64
    '[' (91) 32 33 34 35 38 39 40 88
    ']' (93) 32 33 34 35 38 39 40 88
    '{' (123) 12 46 52
    '}' (125) 12 46 52
    error (256)
    TK_NUM (258) 78
    TK_REAL (259) 79
    TK_TRUE (260) 83
    TK_FALSE (261) 82
    TK_CHAR (262) 62 80
    TK_STRING (263) 61 81
    TK_IF (264) 41 42
    TK_ELSE (265) 42
    TK_FOR (266) 43
    TK_WHILE (267) 44 45
    TK_DO (268) 45
    TK_SWITCH (269) 51
    TK_CASE (270) 56
    TK_DP (271) 56 57
    TK_DEFAULT (272) 57
    TK_PRINT (273) 58
    TK_SCAN (274) 26
    TK_BREAK (275) 49
    TK_CONTINUE (276) 50
    TK_RETURN (277) 36
    TK_TIPO_VOID (278) 9
    TK_QB (279)
    TK_COMENT (280) 37
    TK_MAIN (281) 1
    TK_ID (282) 2 10 11 26 27 28 29 30 31 32 33 34 35 38 39 40 63 77 87 88
    TK_TIPO_INT (283) 1 4 27 32 38
    TK_TIPO_FLOAT (284) 5 28 33 39
    TK_TIPO_BOOL (285) 7 30
    TK_CAST_FLOAT (286) 84
    TK_CAST_INT (287) 85
    TK_CAST_BOOL (288)
    TK_TIPO_CHAR (289) 6 29
    TK_TIPO_STRING (290) 8 31
    TK_FIM (291)
    TK_ERROR (292)
    AND (293) 70
    OR (294) 71
    NO (295) 72
    EQ (296) 66
    NE (297) 67
    GE (298) 68
    LE (299) 69
    TK_CAST_CHAR (300) 86


Nonterminals, with rules where they appear

    $accept (61)
        on left: 0
    S (62)
        on left: 1
        on right: 0
    GLOBAL (63)
        on left: 2 3
        on right: 1
    TIPO (64)
        on left: 4 5 6 7 8 9
        on right: 2 10 11
    PARAMETROS (65)
        on left: 10 11
        on right: 2 11
    BLOCO (66)
        on left: 12
        on right: 1 2 17 41 42
    INI (67)
        on left: 13
        on right: 12 46
    FIM (68)
        on left: 14
        on right: 12 46
    COMANDOS (69)
        on left: 15 16
        on right: 12 15 47 48 56 57
    COMANDO (70)
        on left: 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40
        on right: 15
    IF (71)
        on left: 41
        on right: 19
    IF_ELSE (72)
        on left: 42
        on right: 20
    FOR (73)
        on left: 43
        on right: 23
    WHILE (74)
        on left: 44
        on right: 21
    DO_WHILE (75)
        on left: 45
        on right: 22
    BLOCO_LOOP (76)
        on left: 46
        on right: 43 44 45
    CMD (77)
        on left: 47 48
        on right: 46 47
    BREAK_OR_CONTINUE (78)
        on left: 49 50
        on right: 47
    SWITCH (79)
        on left: 51
        on right: 24
    BLOCO_SWITCH (80)
        on left: 52
        on right: 51
    CASE_LISTA (81)
        on left: 53 54
        on right: 52 53
    CASE_STMT (82)
        on left: 55
        on right: 53
    CASE (83)
        on left: 56 57
        on right: 55
    PRINT (84)
        on left: 58
        on right: 25
    EXPRESSAO (85)
        on left: 59 60
        on right: 58 60
    TEXTO (86)
        on left: 61 62 63
        on right: 59 60
    E (87)
        on left: 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89
        on right: 18 32 33 34 35 36 38 39 40 41 42 43 44 45 51 56 64 65 66 67 68 69 70 71 72 73 74 75 76 77 84 85 86 88


State 0

    0 $accept: • S $end

    TK_TIPO_INT  shift, and go to state 1

    S  go to state 2


State 1

    1 S: TK_TIPO_INT • TK_MAIN '(' ')' BLOCO GLOBAL

    TK_MAIN  shift, and go to state 3


State 2

    0 $accept: S • $end

    $end  shift, and go to state 4


State 3

    1 S: TK_TIPO_INT TK_MAIN • '(' ')' BLOCO GLOBAL

    '('  shift, and go to state 5


State 4

    0 $accept: S $end •

    $default  accept


State 5

    1 S: TK_TIPO_INT TK_MAIN '(' • ')' BLOCO GLOBAL

    ')'  shift, and go to state 6


State 6

    1 S: TK_TIPO_INT TK_MAIN '(' ')' • BLOCO GLOBAL

    '{'  shift, and go to state 7

    BLOCO  go to state 8


State 7

   12 BLOCO: '{' • INI COMANDOS FIM '}'

    $default  reduce using rule 13 (INI)

    INI  go to state 9


State 8

    1 S: TK_TIPO_INT TK_MAIN '(' ')' BLOCO • GLOBAL

    TK_TIPO_VOID    shift, and go to state 10
    TK_TIPO_INT     shift, and go to state 11
    TK_TIPO_FLOAT   shift, and go to state 12
    TK_TIPO_BOOL    shift, and go to state 13
    TK_TIPO_CHAR    shift, and go to state 14
    TK_TIPO_STRING  shift, and go to state 15

    $default  reduce using rule 3 (GLOBAL)

    GLOBAL  go to state 16
    TIPO    go to state 17


State 9

   12 BLOCO: '{' INI • COMANDOS FIM '}'

    TK_NUM          shift, and go to state 18
    TK_REAL         shift, and go to state 19
    TK_TRUE         shift, and go to state 20
    TK_FALSE        shift, and go to state 21
    TK_CHAR         shift, and go to state 22
    TK_STRING       shift, and go to state 23
    TK_IF           shift, and go to state 24
    TK_FOR          shift, and go to state 25
    TK_WHILE        shift, and go to state 26
    TK_DO           shift, and go to state 27
    TK_SWITCH       shift, and go to state 28
    TK_PRINT        shift, and go to state 29
    TK_RETURN       shift, and go to state 30
    TK_COMENT       shift, and go to state 31
    TK_ID           shift, and go to state 32
    TK_TIPO_INT     shift, and go to state 33
    TK_TIPO_FLOAT   shift, and go to state 34
    TK_TIPO_BOOL    shift, and go to state 35
    TK_CAST_FLOAT   shift, and go to state 36
    TK_CAST_INT     shift, and go to state 37
    TK_TIPO_CHAR    shift, and go to state 38
    TK_TIPO_STRING  shift, and go to state 39
    NO              shift, and go to state 40
    '{'             shift, and go to state 7
    TK_CAST_CHAR    shift, and go to state 41

    '}'       reduce using rule 16 (COMANDOS)
    $default  reduce using rule 89 (E)

    BLOCO     go to state 42
    COMANDOS  go to state 43
    COMANDO   go to state 44
    IF        go to state 45
    IF_ELSE   go to state 46
    FOR       go to state 47
    WHILE     go to state 48
    DO_WHILE  go to state 49
    SWITCH    go to state 50
    PRINT     go to state 51
    E         go to state 52


State 10

    9 TIPO: TK_TIPO_VOID •

    $default  reduce using rule 9 (TIPO)


State 11

    4 TIPO: TK_TIPO_INT •

    $default  reduce using rule 4 (TIPO)


State 12

    5 TIPO: TK_TIPO_FLOAT •

    $default  reduce using rule 5 (TIPO)


State 13

    7 TIPO: TK_TIPO_BOOL •

    $default  reduce using rule 7 (TIPO)


State 14

    6 TIPO: TK_TIPO_CHAR •

    $default  reduce using rule 6 (TIPO)


State 15

    8 TIPO: TK_TIPO_STRING •

    $default  reduce using rule 8 (TIPO)


State 16

    1 S: TK_TIPO_INT TK_MAIN '(' ')' BLOCO GLOBAL •

    $default  reduce using rule 1 (S)


State 17

    2 GLOBAL: TIPO • TK_ID '(' PARAMETROS ')' BLOCO

    TK_ID  shift, and go to state 53


State 18

   78 E: TK_NUM •

    $default  reduce using rule 78 (E)


State 19

   79 E: TK_REAL •

    $default  reduce using rule 79 (E)


State 20

   83 E: TK_TRUE •

    $default  reduce using rule 83 (E)


State 21

   82 E: TK_FALSE •

    $default  reduce using rule 82 (E)


State 22

   80 E: TK_CHAR •

    $default  reduce using rule 80 (E)


State 23

   81 E: TK_STRING •

    $default  reduce using rule 81 (E)


State 24

   41 IF: TK_IF • '(' E ')' BLOCO
   42 IF_ELSE: TK_IF • '(' E ')' BLOCO TK_ELSE BLOCO

    '('  shift, and go to state 54


State 25

   43 FOR: TK_FOR • '(' E ';' E ';' E ')' BLOCO_LOOP

    '('  shift, and go to state 55


State 26

   44 WHILE: TK_WHILE • '(' E ')' BLOCO_LOOP

    '('  shift, and go to state 56


State 27

   45 DO_WHILE: TK_DO • BLOCO_LOOP TK_WHILE '(' E ')' ';'

    '{'  shift, and go to state 57

    BLOCO_LOOP  go to state 58


State 28

   51 SWITCH: TK_SWITCH • '(' E ')' BLOCO_SWITCH

    '('  shift, and go to state 59


State 29

   58 PRINT: TK_PRINT • '(' EXPRESSAO ')' ';'

    '('  shift, and go to state 60


State 30

   36 COMANDO: TK_RETURN • E ';'

    TK_NUM         shift, and go to state 18
    TK_REAL        shift, and go to state 19
    TK_TRUE        shift, and go to state 20
    TK_FALSE       shift, and go to state 21
    TK_CHAR        shift, and go to state 22
    TK_STRING      shift, and go to state 23
    TK_ID          shift, and go to state 61
    TK_CAST_FLOAT  shift, and go to state 36
    TK_CAST_INT    shift, and go to state 37
    NO             shift, and go to state 40
    TK_CAST_CHAR   shift, and go to state 41

    $default  reduce using rule 89 (E)

    E  go to state 62


State 31

   37 COMANDO: TK_COMENT •

    $default  reduce using rule 37 (COMANDO)


State 32

   26 COMANDO: TK_ID • '=' TK_SCAN '(' ')' ';'
   34        | TK_ID • '=' TK_ID '[' E ']' ';'
   35        | TK_ID • '[' E ']' '=' E ';'
   40        | TK_ID • '[' E ']' '[' E ']' '=' E ';'
   77 E: TK_ID • '=' E
   87  | TK_ID •
   88  | TK_ID • '[' E ']'

    '='  shift, and go to state 63
    '['  shift, and go to state 64

    $default  reduce using rule 87 (E)


State 33

   27 COMANDO: TK_TIPO_INT • TK_ID ';'
   32        | TK_TIPO_INT • TK_ID '[' E ']' ';'
   38        | TK_TIPO_INT • TK_ID '[' E ']' '[' E ']' ';'

    TK_ID  shift, and go to state 65


State 34

   28 COMANDO: TK_TIPO_FLOAT • TK_ID ';'
   33        | TK_TIPO_FLOAT • TK_ID '[' E ']' ';'
   39        | TK_TIPO_FLOAT • TK_ID '[' E ']' '[' E ']' ';'

    TK_ID  shift, and go to state 66


State 35

   30 COMANDO: TK_TIPO_BOOL • TK_ID ';'

    TK_ID  shift, and go to state 67


State 36

   84 E: TK_CAST_FLOAT • E

    TK_NUM         shift, and go to state 18
    TK_REAL        shift, and go to state 19
    TK_TRUE        shift, and go to state 20
    TK_FALSE       shift, and go to state 21
    TK_CHAR        shift, and go to state 22
    TK_STRING      shift, and go to state 23
    TK_ID          shift, and go to state 61
    TK_CAST_FLOAT  shift, and go to state 36
    TK_CAST_INT    shift, and go to state 37
    NO             shift, and go to state 40
    TK_CAST_CHAR   shift, and go to state 41

    $default  reduce using rule 89 (E)

    E  go to state 68


State 37

   85 E: TK_CAST_INT • E

    TK_NUM         shift, and go to state 18
    TK_REAL        shift, and go to state 19
    TK_TRUE        shift, and go to state 20
    TK_FALSE       shift, and go to state 21
    TK_CHAR        shift, and go to state 22
    TK_STRING      shift, and go to state 23
    TK_ID          shift, and go to state 61
    TK_CAST_FLOAT  shift, and go to state 36
    TK_CAST_INT    shift, and go to state 37
    NO             shift, and go to state 40
    TK_CAST_CHAR   shift, and go to state 41

    $default  reduce using rule 89 (E)

    E  go to state 69


State 38

   29 COMANDO: TK_TIPO_CHAR • TK_ID ';'

    TK_ID  shift, and go to state 70


State 39

   31 COMANDO: TK_TIPO_STRING • TK_ID ';'

    TK_ID  shift, and go to state 71


State 40

   72 E: NO • E

    TK_NUM         shift, and go to state 18
    TK_REAL        shift, and go to state 19
    TK_TRUE        shift, and go to state 20
    TK_FALSE       shift, and go to state 21
    TK_CHAR        shift, and go to state 22
    TK_STRING      shift, and go to state 23
    TK_ID          shift, and go to state 61
    TK_CAST_FLOAT  shift, and go to state 36
    TK_CAST_INT    shift, and go to state 37
    NO             shift, and go to state 40
    TK_CAST_CHAR   shift, and go to state 41

    $default  reduce using rule 89 (E)

    E  go to state 72


State 41

   86 E: TK_CAST_CHAR • E

    TK_NUM         shift, and go to state 18
    TK_REAL        shift, and go to state 19
    TK_TRUE        shift, and go to state 20
    TK_FALSE       shift, and go to state 21
    TK_CHAR        shift, and go to state 22
    TK_STRING      shift, and go to state 23
    TK_ID          shift, and go to state 61
    TK_CAST_FLOAT  shift, and go to state 36
    TK_CAST_INT    shift, and go to state 37
    NO             shift, and go to state 40
    TK_CAST_CHAR   shift, and go to state 41

    $default  reduce using rule 89 (E)

    E  go to state 73


State 42

   17 COMANDO: BLOCO •

    $default  reduce using rule 17 (COMANDO)


State 43

   12 BLOCO: '{' INI COMANDOS • FIM '}'

    $default  reduce using rule 14 (FIM)

    FIM  go to state 74


State 44

   15 COMANDOS: COMANDO • COMANDOS

    TK_NUM          shift, and go to state 18
    TK_REAL         shift, and go to state 19
    TK_TRUE         shift, and go to state 20
    TK_FALSE        shift, and go to state 21
    TK_CHAR         shift, and go to state 22
    TK_STRING       shift, and go to state 23
    TK_IF           shift, and go to state 24
    TK_FOR          shift, and go to state 25
    TK_WHILE        shift, and go to state 26
    TK_DO           shift, and go to state 27
    TK_SWITCH       shift, and go to state 28
    TK_PRINT        shift, and go to state 29
    TK_RETURN       shift, and go to state 30
    TK_COMENT       shift, and go to state 31
    TK_ID           shift, and go to state 32
    TK_TIPO_INT     shift, and go to state 33
    TK_TIPO_FLOAT   shift, and go to state 34
    TK_TIPO_BOOL    shift, and go to state 35
    TK_CAST_FLOAT   shift, and go to state 36
    TK_CAST_INT     shift, and go to state 37
    TK_TIPO_CHAR    shift, and go to state 38
    TK_TIPO_STRING  shift, and go to state 39
    NO              shift, and go to state 40
    '{'             shift, and go to state 7
    TK_CAST_CHAR    shift, and go to state 41

    TK_CASE      reduce using rule 16 (COMANDOS)
    TK_DEFAULT   reduce using rule 16 (COMANDOS)
    TK_BREAK     reduce using rule 16 (COMANDOS)
    TK_CONTINUE  reduce using rule 16 (COMANDOS)
    '}'          reduce using rule 16 (COMANDOS)
    $default     reduce using rule 89 (E)

    BLOCO     go to state 42
    COMANDOS  go to state 75
    COMANDO   go to state 44
    IF        go to state 45
    IF_ELSE   go to state 46
    FOR       go to state 47
    WHILE     go to state 48
    DO_WHILE  go to state 49
    SWITCH    go to state 50
    PRINT     go to state 51
    E         go to state 52


State 45

   19 COMANDO: IF •

    $default  reduce using rule 19 (COMANDO)


State 46

   20 COMANDO: IF_ELSE •

    $default  reduce using rule 20 (COMANDO)


State 47

   23 COMANDO: FOR •

    $default  reduce using rule 23 (COMANDO)


State 48

   21 COMANDO: WHILE •

    $default  reduce using rule 21 (COMANDO)


State 49

   22 COMANDO: DO_WHILE •

    $default  reduce using rule 22 (COMANDO)


State 50

   24 COMANDO: SWITCH •

    $default  reduce using rule 24 (COMANDO)


State 51

   25 COMANDO: PRINT •

    $default  reduce using rule 25 (COMANDO)


State 52

   18 COMANDO: E • ';'
   64 E: E • '>' E
   65  | E • '<' E
   66  | E • EQ E
   67  | E • NE E
   68  | E • GE E
   69  | E • LE E
   70  | E • AND E
   71  | E • OR E
   73  | E • '+' E
   74  | E • '-' E
   75  | E • '*' E
   76  | E • '/' E

    AND  shift, and go to state 76
    OR   shift, and go to state 77
    '>'  shift, and go to state 78
    '<'  shift, and go to state 79
    EQ   shift, and go to state 80
    NE   shift, and go to state 81
    GE   shift, and go to state 82
    LE   shift, and go to state 83
    '+'  shift, and go to state 84
    '-'  shift, and go to state 85
    '*'  shift, and go to state 86
    '/'  shift, and go to state 87
    ';'  shift, and go to state 88


State 53

    2 GLOBAL: TIPO TK_ID • '(' PARAMETROS ')' BLOCO

    '('  shift, and go to state 89


State 54

   41 IF: TK_IF '(' • E ')' BLOCO
   42 IF_ELSE: TK_IF '(' • E ')' BLOCO TK_ELSE BLOCO

    TK_NUM         shift, and go to state 18
    TK_REAL        shift, and go to state 19
    TK_TRUE        shift, and go to state 20
    TK_FALSE       shift, and go to state 21
    TK_CHAR        shift, and go to state 22
    TK_STRING      shift, and go to state 23
    TK_ID          shift, and go to state 61
    TK_CAST_FLOAT  shift, and go to state 36
    TK_CAST_INT    shift, and go to state 37
    NO             shift, and go to state 40
    TK_CAST_CHAR   shift, and go to state 41

    $default  reduce using rule 89 (E)

    E  go to state 90


State 55

   43 FOR: TK_FOR '(' • E ';' E ';' E ')' BLOCO_LOOP

    TK_NUM         shift, and go to state 18
    TK_REAL        shift, and go to state 19
    TK_TRUE        shift, and go to state 20
    TK_FALSE       shift, and go to state 21
    TK_CHAR        shift, and go to state 22
    TK_STRING      shift, and go to state 23
    TK_ID          shift, and go to state 61
    TK_CAST_FLOAT  shift, and go to state 36
    TK_CAST_INT    shift, and go to state 37
    NO             shift, and go to state 40
    TK_CAST_CHAR   shift, and go to state 41

    $default  reduce using rule 89 (E)

    E  go to state 91


State 56

   44 WHILE: TK_WHILE '(' • E ')' BLOCO_LOOP

    TK_NUM         shift, and go to state 18
    TK_REAL        shift, and go to state 19
    TK_TRUE        shift, and go to state 20
    TK_FALSE       shift, and go to state 21
    TK_CHAR        shift, and go to state 22
    TK_STRING      shift, and go to state 23
    TK_ID          shift, and go to state 61
    TK_CAST_FLOAT  shift, and go to state 36
    TK_CAST_INT    shift, and go to state 37
    NO             shift, and go to state 40
    TK_CAST_CHAR   shift, and go to state 41

    $default  reduce using rule 89 (E)

    E  go to state 92


State 57

   46 BLOCO_LOOP: '{' • INI CMD FIM '}'

    $default  reduce using rule 13 (INI)

    INI  go to state 93


State 58

   45 DO_WHILE: TK_DO BLOCO_LOOP • TK_WHILE '(' E ')' ';'

    TK_WHILE  shift, and go to state 94


State 59

   51 SWITCH: TK_SWITCH '(' • E ')' BLOCO_SWITCH

    TK_NUM         shift, and go to state 18
    TK_REAL        shift, and go to state 19
    TK_TRUE        shift, and go to state 20
    TK_FALSE       shift, and go to state 21
    TK_CHAR        shift, and go to state 22
    TK_STRING      shift, and go to state 23
    TK_ID          shift, and go to state 61
    TK_CAST_FLOAT  shift, and go to state 36
    TK_CAST_INT    shift, and go to state 37
    NO             shift, and go to state 40
    TK_CAST_CHAR   shift, and go to state 41

    $default  reduce using rule 89 (E)

    E  go to state 95


State 60

   58 PRINT: TK_PRINT '(' • EXPRESSAO ')' ';'

    TK_CHAR    shift, and go to state 96
    TK_STRING  shift, and go to state 97
    TK_ID      shift, and go to state 98

    EXPRESSAO  go to state 99
    TEXTO      go to state 100


State 61

   77 E: TK_ID • '=' E
   87  | TK_ID •
   88  | TK_ID • '[' E ']'

    '='  shift, and go to state 101
    '['  shift, and go to state 102

    $default  reduce using rule 87 (E)


State 62

   36 COMANDO: TK_RETURN E • ';'
   64 E: E • '>' E
   65  | E • '<' E
   66  | E • EQ E
   67  | E • NE E
   68  | E • GE E
   69  | E • LE E
   70  | E • AND E
   71  | E • OR E
   73  | E • '+' E
   74  | E • '-' E
   75  | E • '*' E
   76  | E • '/' E

    AND  shift, and go to state 76
    OR   shift, and go to state 77
    '>'  shift, and go to state 78
    '<'  shift, and go to state 79
    EQ   shift, and go to state 80
    NE   shift, and go to state 81
    GE   shift, and go to state 82
    LE   shift, and go to state 83
    '+'  shift, and go to state 84
    '-'  shift, and go to state 85
    '*'  shift, and go to state 86
    '/'  shift, and go to state 87
    ';'  shift, and go to state 103


State 63

   26 COMANDO: TK_ID '=' • TK_SCAN '(' ')' ';'
   34        | TK_ID '=' • TK_ID '[' E ']' ';'
   77 E: TK_ID '=' • E

    TK_NUM         shift, and go to state 18
    TK_REAL        shift, and go to state 19
    TK_TRUE        shift, and go to state 20
    TK_FALSE       shift, and go to state 21
    TK_CHAR        shift, and go to state 22
    TK_STRING      shift, and go to state 23
    TK_SCAN        shift, and go to state 104
    TK_ID          shift, and go to state 105
    TK_CAST_FLOAT  shift, and go to state 36
    TK_CAST_INT    shift, and go to state 37
    NO             shift, and go to state 40
    TK_CAST_CHAR   shift, and go to state 41

    $default  reduce using rule 89 (E)

    E  go to state 106


State 64

   35 COMANDO: TK_ID '[' • E ']' '=' E ';'
   40        | TK_ID '[' • E ']' '[' E ']' '=' E ';'
   88 E: TK_ID '[' • E ']'

    TK_NUM         shift, and go to state 18
    TK_REAL        shift, and go to state 19
    TK_TRUE        shift, and go to state 20
    TK_FALSE       shift, and go to state 21
    TK_CHAR        shift, and go to state 22
    TK_STRING      shift, and go to state 23
    TK_ID          shift, and go to state 61
    TK_CAST_FLOAT  shift, and go to state 36
    TK_CAST_INT    shift, and go to state 37
    NO             shift, and go to state 40
    TK_CAST_CHAR   shift, and go to state 41

    $default  reduce using rule 89 (E)

    E  go to state 107


State 65

   27 COMANDO: TK_TIPO_INT TK_ID • ';'
   32        | TK_TIPO_INT TK_ID • '[' E ']' ';'
   38        | TK_TIPO_INT TK_ID • '[' E ']' '[' E ']' ';'

    ';'  shift, and go to state 108
    '['  shift, and go to state 109


State 66

   28 COMANDO: TK_TIPO_FLOAT TK_ID • ';'
   33        | TK_TIPO_FLOAT TK_ID • '[' E ']' ';'
   39        | TK_TIPO_FLOAT TK_ID • '[' E ']' '[' E ']' ';'

    ';'  shift, and go to state 110
    '['  shift, and go to state 111


State 67

   30 COMANDO: TK_TIPO_BOOL TK_ID • ';'

    ';'  shift, and go to state 112


State 68

   64 E: E • '>' E
   65  | E • '<' E
   66  | E • EQ E
   67  | E • NE E
   68  | E • GE E
   69  | E • LE E
   70  | E • AND E
   71  | E • OR E
   73  | E • '+' E
   74  | E • '-' E
   75  | E • '*' E
   76  | E • '/' E
   84  | TK_CAST_FLOAT E •

    $default  reduce using rule 84 (E)


State 69

   64 E: E • '>' E
   65  | E • '<' E
   66  | E • EQ E
   67  | E • NE E
   68  | E • GE E
   69  | E • LE E
   70  | E • AND E
   71  | E • OR E
   73  | E • '+' E
   74  | E • '-' E
   75  | E • '*' E
   76  | E • '/' E
   85  | TK_CAST_INT E •

    $default  reduce using rule 85 (E)


State 70

   29 COMANDO: TK_TIPO_CHAR TK_ID • ';'

    ';'  shift, and go to state 113


State 71

   31 COMANDO: TK_TIPO_STRING TK_ID • ';'

    ';'  shift, and go to state 114


State 72

   64 E: E • '>' E
   65  | E • '<' E
   66  | E • EQ E
   67  | E • NE E
   68  | E • GE E
   69  | E • LE E
   70  | E • AND E
   71  | E • OR E
   72  | NO E •
   73  | E • '+' E
   74  | E • '-' E
   75  | E • '*' E
   76  | E • '/' E

    '>'  shift, and go to state 78
    '<'  shift, and go to state 79
    EQ   shift, and go to state 80
    NE   shift, and go to state 81
    GE   shift, and go to state 82
    LE   shift, and go to state 83
    '+'  shift, and go to state 84
    '-'  shift, and go to state 85
    '*'  shift, and go to state 86
    '/'  shift, and go to state 87

    $default  reduce using rule 72 (E)


State 73

   64 E: E • '>' E
   65  | E • '<' E
   66  | E • EQ E
   67  | E • NE E
   68  | E • GE E
   69  | E • LE E
   70  | E • AND E
   71  | E • OR E
   73  | E • '+' E
   74  | E • '-' E
   75  | E • '*' E
   76  | E • '/' E
   86  | TK_CAST_CHAR E •

    $default  reduce using rule 86 (E)


State 74

   12 BLOCO: '{' INI COMANDOS FIM • '}'

    '}'  shift, and go to state 115


State 75

   15 COMANDOS: COMANDO COMANDOS •

    $default  reduce using rule 15 (COMANDOS)


State 76

   70 E: E AND • E

    TK_NUM         shift, and go to state 18
    TK_REAL        shift, and go to state 19
    TK_TRUE        shift, and go to state 20
    TK_FALSE       shift, and go to state 21
    TK_CHAR        shift, and go to state 22
    TK_STRING      shift, and go to state 23
    TK_ID          shift, and go to state 61
    TK_CAST_FLOAT  shift, and go to state 36
    TK_CAST_INT    shift, and go to state 37
    NO             shift, and go to state 40
    TK_CAST_CHAR   shift, and go to state 41

    $default  reduce using rule 89 (E)

    E  go to state 116


State 77

   71 E: E OR • E

    TK_NUM         shift, and go to state 18
    TK_REAL        shift, and go to state 19
    TK_TRUE        shift, and go to state 20
    TK_FALSE       shift, and go to state 21
    TK_CHAR        shift, and go to state 22
    TK_STRING      shift, and go to state 23
    TK_ID          shift, and go to state 61
    TK_CAST_FLOAT  shift, and go to state 36
    TK_CAST_INT    shift, and go to state 37
    NO             shift, and go to state 40
    TK_CAST_CHAR   shift, and go to state 41

    $default  reduce using rule 89 (E)

    E  go to state 117


State 78

   64 E: E '>' • E

    TK_NUM         shift, and go to state 18
    TK_REAL        shift, and go to state 19
    TK_TRUE        shift, and go to state 20
    TK_FALSE       shift, and go to state 21
    TK_CHAR        shift, and go to state 22
    TK_STRING      shift, and go to state 23
    TK_ID          shift, and go to state 61
    TK_CAST_FLOAT  shift, and go to state 36
    TK_CAST_INT    shift, and go to state 37
    NO             shift, and go to state 40
    TK_CAST_CHAR   shift, and go to state 41

    $default  reduce using rule 89 (E)

    E  go to state 118


State 79

   65 E: E '<' • E

    TK_NUM         shift, and go to state 18
    TK_REAL        shift, and go to state 19
    TK_TRUE        shift, and go to state 20
    TK_FALSE       shift, and go to state 21
    TK_CHAR        shift, and go to state 22
    TK_STRING      shift, and go to state 23
    TK_ID          shift, and go to state 61
    TK_CAST_FLOAT  shift, and go to state 36
    TK_CAST_INT    shift, and go to state 37
    NO             shift, and go to state 40
    TK_CAST_CHAR   shift, and go to state 41

    $default  reduce using rule 89 (E)

    E  go to state 119


State 80

   66 E: E EQ • E

    TK_NUM         shift, and go to state 18
    TK_REAL        shift, and go to state 19
    TK_TRUE        shift, and go to state 20
    TK_FALSE       shift, and go to state 21
    TK_CHAR        shift, and go to state 22
    TK_STRING      shift, and go to state 23
    TK_ID          shift, and go to state 61
    TK_CAST_FLOAT  shift, and go to state 36
    TK_CAST_INT    shift, and go to state 37
    NO             shift, and go to state 40
    TK_CAST_CHAR   shift, and go to state 41

    $default  reduce using rule 89 (E)

    E  go to state 120


State 81

   67 E: E NE • E

    TK_NUM         shift, and go to state 18
    TK_REAL        shift, and go to state 19
    TK_TRUE        shift, and go to state 20
    TK_FALSE       shift, and go to state 21
    TK_CHAR        shift, and go to state 22
    TK_STRING      shift, and go to state 23
    TK_ID          shift, and go to state 61
    TK_CAST_FLOAT  shift, and go to state 36
    TK_CAST_INT    shift, and go to state 37
    NO             shift, and go to state 40
    TK_CAST_CHAR   shift, and go to state 41

    $default  reduce using rule 89 (E)

    E  go to state 121


State 82

   68 E: E GE • E
